feat: get all product with project query
