# src/api/request/ExchangeLogSearchReq.ts
@@ -1,7 +1,0 @@
-import { PageReq } from "./PageReq";
-
-
-export class ExchangeLogSearchReq extends PageReq {
-  user_toxic_project: string;
-  user_catbotica_project: string;
-}
