# src/swagger/product/getAllProductSw.yaml
@@ -24,6 +24,20 @@ paths:
           description: page number
           schema:
             type: integer     
+          
+        - name: user_toxic_project
+          in: query
+          required: false
+          description: 참여 프로젝트(톡시)
+          schema:
+            type: string
+            
+        - name: user_catbotica_project
+          in: query
+          required: false
+          description: 참여 프로젝트(캣보티카)
+          schema:
+            type: string
 
       responses:
         200:
